--- a/src/app/components/admin/drink/edit-drink/edit-drink.component.html
+++ b/src/app/components/admin/drink/edit-drink/edit-drink.component.html
@@ -235,7 +235,7 @@
 
                     <div *ngIf="this.main_image" class="width-full bg-grey-lighter">
                       <div class="width-2/3 flex items-center justify-center">
-                        <img [src]="this.main_image" class="h-24" />
+                        <img [src]="this.main_image" alt="main-image" class="h-24" />
                       </div>
                       <div class="pt-4 flex space-x-4 justify-center w-full">
                         <button
@@ -579,7 +579,7 @@
 
               <div *ngIf="this.main_image_ing" class="width-full bg-grey-lighter">
                 <div class="width-2/3 flex items-center justify-center">
-                  <img [src]="this.main_image_ing" class="h-24" />
+                  <img [src]="this.main_image_ing" alt="main-image" class="h-24" />
                 </div>
                 <div class="pt-4 flex space-x-4 justify-center w-full">
                   <button
