--- a/src/app/components/drinks/drinks-filter/drinks-filter.component.html
+++ b/src/app/components/drinks/drinks-filter/drinks-filter.component.html
@@ -20,11 +20,13 @@
       src="https://imageog.flaticon.com/icons/png/512/25/25623.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
       class="h-4"
       *ngIf="licor_hidden"
+      alt="show"
     />
     <img
       src="https://imageog.flaticon.com/icons/png/512/61/61032.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
       class="h-4"
       *ngIf="!licor_hidden"
+      alt="hide"
     />
   </div>
 </div>
@@ -77,11 +79,13 @@
       src="https://imageog.flaticon.com/icons/png/512/25/25623.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
       class="h-4"
       *ngIf="bebida_hidden"
+      alt="show"
     />
     <img
       src="https://imageog.flaticon.com/icons/png/512/61/61032.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
       class="h-4"
       *ngIf="!bebida_hidden"
+      alt="hide"
     />
   </div>
 </div>
@@ -134,11 +138,13 @@
       src="https://imageog.flaticon.com/icons/png/512/25/25623.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
       class="h-4"
       *ngIf="fruta_hidden"
+      alt="show"
     />
     <img
       src="https://imageog.flaticon.com/icons/png/512/61/61032.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
       class="h-4"
       *ngIf="!fruta_hidden"
+      alt="hide"
     />
   </div>
 </div>
@@ -187,11 +193,13 @@
       src="https://imageog.flaticon.com/icons/png/512/25/25623.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
       class="h-4"
       *ngIf="hierba_hidden"
+      alt="show"
     />
     <img
       src="https://imageog.flaticon.com/icons/png/512/61/61032.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
       class="h-4"
       *ngIf="!hierba_hidden"
+      alt="hide"
     />
   </div>
 </div>
@@ -234,6 +242,7 @@
     src="https://imageog.flaticon.com/icons/png/512/61/61032.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
     class="h-4"
     *ngIf="!hierba_hidden"
+    alt="hide"
   />
 </div>
 <!---------------------------------------------------------------------------------------------------------------------------->
