--- a/src/app/components/admin/game/add-game/add-game.component.html
+++ b/src/app/components/admin/game/add-game/add-game.component.html
@@ -174,7 +174,7 @@
 
                 <div *ngIf="this.main_image" class="width-full bg-grey-lighter">
                   <div class="width-2/3 flex items-center justify-center">
-                    <img [src]="this.main_image" class="h-24" />
+                    <img [src]="this.main_image" class="h-24" alt="main-image"/>
                   </div>
                   <div class="flex space-x-4 justify-end w-full">
                     <button
