--- a/src/app/components/admin/game/edit-game/edit-game.component.html
+++ b/src/app/components/admin/game/edit-game/edit-game.component.html
@@ -205,7 +205,7 @@
 
             <div *ngIf="this.main_image" class="width-full bg-grey-lighter">
               <div class="width-2/3 flex items-center justify-center">
-                <img [src]="this.main_image" class="h-24" />
+                <img [src]="this.main_image" class="h-24" alt="main-image"/>
               </div>
               <div class="pt-4 flex space-x-4 justify-center w-full">
                 <button
