--- a/src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.html
+++ b/src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.html
@@ -141,7 +141,7 @@
 
             <div *ngIf="this.main_image" class="width-full bg-grey-lighter">
               <div class="width-2/3 flex items-center justify-center">
-                <img [src]="this.main_image" class="h-24" />
+                <img [src]="this.main_image" alt="main-image" class="h-24" />
               </div>
               <div class="pt-4 flex space-x-4 justify-end w-full">
                 <button
