--- a/src/app/components/bars/bars-list/bars-list.component.html
+++ b/src/app/components/bars/bars-list/bars-list.component.html
@@ -56,7 +56,7 @@
   
 
 <button class="back_btn" (click)="goBack()">
-  <img class="p-3" src="assets/images/goback.png" alt="" >
+  <img class="p-3" src="assets/images/goback.png" alt="button" >
 </button>
 <app-footer></app-footer>
 </div>
