--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -43,7 +43,7 @@
                 </div>
                 </div>
                 <div class="flex px-8 sm:px-48 md:px-64 py-4 pt-8 text-2xl sm:text-4xl md:text-5xl font-semibold">
-                  PREPARALO TU MISMO
+                  PREPÁRALO TÚ MISMO
                   <div class="flex items-center justify-center px-2 sm:px-8 md:px-8">
                     <a href="/drinks" class="hover:no-underline">
                         <div class="text-lg text-center sm:text-xl md:text-xl no-underline py-1 px-8 bg-orange-400 hover:bg-orange-500 text-white rounded">Ver más
@@ -110,8 +110,8 @@
             
                     </div>
                     <div>
-                      <div class="flex justify-center">Tienes una receta?</div>
-                      <div class="flex justify-center">Compartela con nosotros</div>
+                      <div class="flex justify-center">¿Tienes una receta?</div>
+                      <div class="flex justify-center">Compártela con nosotros</div>
                     </div>  
                     </div>
                     
@@ -165,8 +165,8 @@
         
                 </div>
                 <div>
-                  <div class="flex justify-center">Tu bar tiene una promoción?</div>
-                  <div class="flex justify-center">Compartela con nosotros</div>
+                  <div class="flex justify-center">¿Tu bar tiene una promoción?</div>
+                  <div class="flex justify-center">Compártela con nosotros</div>
                 </div>  
                 </div>
                 
