--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
     <div *ngIf="!loading" class="h-full w-full">
         <div class="h-full w-full px-16 py-16">
             <!-- PRESENTACION -->
-            <div (click)="addAdvertisement()" class="sm:flex md:flex justify-center px-8 sm:px-32 md:px-64 transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
+            <div  class="sm:flex md:flex justify-center px-8 sm:px-32 md:px-64 transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
               <div class="flex justify-center items-center w-2/3">
                 <div class="flex justify-center">
                 <img
@@ -46,7 +46,7 @@
                   PREPÁRALO TÚ MISMO
                   <div class="flex items-center justify-center px-2 sm:px-8 md:px-8">
                     <a href="/drinks" class="hover:no-underline">
-                        <div class="text-lg text-center sm:text-xl md:text-xl no-underline py-1 px-8 bg-orange-400 hover:bg-orange-500 text-white rounded">Ver más
+                        <div class="text-lg text-center sm:text-xl md:text-xl no-underline py-1 px-8 bg-orange-500 hover:bg-orange-400 text-white rounded">Ver más
                         </div>
                     </a>
                   </div>
@@ -54,7 +54,7 @@
                 <!-- DRINK CARDS -->
                 <div class="w-full flex flex-col items-center mb-20 mt-10">
                   <div class="drink_card">
-                    <div id="test" class="rounded overflow-hidden border-2 shadow-lg   hover:border-solid hover:border-orange-500 hover:border-opacity-75   transition ease-in duration-200" 
+                    <div  class="rounded overflow-hidden border-2 shadow-lg   hover:border-solid hover:border-orange-500 hover:border-opacity-75   transition ease-in duration-200" 
                     *ngFor="let item of showDrinks"   
                     >
                     
@@ -90,9 +90,9 @@
                 
                 <!-- FIN DRINK CARDS -->
                 <div class="flex justify-center pb-12">
-                    <div (click)="addDrink()" class="text-gray-400 hover:text-orange-500">
+                    <div (click)="addDrink()" class="text-gray-900 hover:text-orange-500">
                     <div class="flex h-24 sm:h-32 md:h-32 justify-center">
-                      <svg class="fill-current h-1/4 w-1/4" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                      <svg class="fill-current h-1/4 w-1/4" version="1.1"  xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
                         style="enable-background:new 0 0 512 512;" xml:space="preserve">
                         <g>
@@ -145,9 +145,9 @@
               <!-- FIN BAR CARDS -->
 
               <div class="flex justify-center pb-12">
-                <div (click)="addAdvertisement()" class="w-auto text-gray-400 hover:text-orange-500">
+                <div (click)="addAdvertisement()" class="w-auto text-gray-900 hover:text-orange-500">
                 <div class="flex h-24 sm:h-32 md:h-32 justify-center">
-                  <svg class="fill-current h-1/4 w-1/4" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                  <svg class="fill-current h-1/4 w-1/4" version="1.1"  xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
                     style="enable-background:new 0 0 512 512;" xml:space="preserve">
                     <g>
@@ -185,7 +185,7 @@
                   DISFRUTA DE CARACAS
                   <div class="flex items-center justify-center px-2 sm:px-8 md:px-8">
                     <a href="/bars" class="hover:no-underline">
-                        <div class="flex items-center text-lg text-center sm:text-xl md:text-xl no-underline py-1 px-8 bg-orange-400 hover:bg-orange-500 text-white rounded">Ver más
+                        <div class="flex items-center text-lg text-center sm:text-xl md:text-xl no-underline py-1 px-8 bg-orange-500 hover:bg-orange-400 text-white rounded">Ver más
                         </div>
                     </a>
                   </div>
