--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,7 +19,7 @@
                 <div class="md:w-1/5">
                   <label
                     class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-                    for="inline-full-name"
+                    for="username"
                   >
                     Nombre de usuario
                   </label>
@@ -28,7 +28,7 @@
                   <input
                     formControlName="user_name"
                     class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                    id="inline-full-name"
+                    id="username"
                     type="text"
                     placeholder="Nombre de usuario"
                     required
@@ -40,7 +40,7 @@
                 <div class="md:w-1/5">
                   <label
                     class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-                    for="inline-full-name"
+                    for="password"
                   >
                     Contraseña
                   </label>
@@ -49,7 +49,7 @@
                   <input
                     formControlName="password"
                     class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                    id="inline-full-name"
+                    id="password"
                     type="password"
                     placeholder="Ingrese su contraseña"
                     required
