--- a/src/app/components/post-drink/post-drink.component.html
+++ b/src/app/components/post-drink/post-drink.component.html
@@ -32,7 +32,7 @@
                         <div class="md:w-full lg:w-1/5">
                             <label
                                 class="block text-black-500 font-bold md:text-left lg:text-right mb-1 md:mb-0 pr-4"
-                                for="inline-full-name"
+                                for="name"
                             >
                                 Nombre del trago
                             </label>
@@ -41,7 +41,7 @@
                             <input
                                 formControlName="name"
                                 class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                                
+                                id="name"
                                 type="text"
                                 placeholder="Ej. Mojito"
                             />
@@ -58,7 +58,7 @@
                     <div class="md:w-full lg:w-1/5">
                     <label
                         class="block text-black-500 font-bold md:text-left lg:text-right mb-1 md:mb-0 pr-4"
-                        for="inline-full-name"
+                        for="description"
                     >
                         Descripción
                     </label>
@@ -67,7 +67,7 @@
                     <input
                         formControlName="description"
                         class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                        
+                        id="description"
                         type="text"
                         placeholder="Ej. Trago ideal para compartir con tus amigos."
                     />
@@ -88,7 +88,7 @@
                     <div class="md:w-full lg:w-1/5">
                     <label
                         class="block text-black-500 font-bold md:text-left lg:text-right mb-1 md:mb-0 pr-4"
-                        for="inline-full-name"
+                        for="recipe"
                     >
                         Receta
                     </label>
@@ -98,7 +98,7 @@
                         name="recipe" 
                         formControlName="recipe"
                         class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                        
+                        id="recipe"
                         rows="10" cols="30"
                         placeholder="Introduzca el paso a paso de la receta..."
                         style= "white-space: pre-line; white-space: pre-wrap;"
@@ -118,7 +118,7 @@
                 <div class="md:w-full lg:w-1/5">
                     <label
                     class="block text-black-500 font-bold lg:text-right md:text-left mb-1 md:mb-0 pr-4"
-                    for="inline-full-name"
+                    for="anonymous"
                     >
                     ¿Desea enviar esta receta anónima?
                     </label>
@@ -128,7 +128,7 @@
                     <div
                     class="bg-white shadow w-6 h-6 p-1 flex justify-center items-center mr-2"
                     >
-                    <input formControlName="anonymous" type="checkbox" class="hidden" />
+                    <input formControlName="anonymous" id="anonymous" type="checkbox" class="hidden" />
                     <svg
                         class="hidden w-4 h-4 text-green-600 pointer-events-none"
                         viewBox="0 0 172 172"
@@ -167,7 +167,7 @@
                         <div class="w-full lg:w-1/5">
                         <label
                             class="block text-black-500 font-bold lg:text-right mb-1 md:mb-6 pr-4"
-                            for="inline-full-name"
+                            for="ingredients"
                         >
                             Ingrediente
                         </label>
