--- a/src/app/components/test-bar/test-bar.component.html
+++ b/src/app/components/test-bar/test-bar.component.html
@@ -29,8 +29,8 @@
 </div>
 
 <div id="barPhone">
-    <input type="checkbox" (change)="makeChange()" class="h-10 w-10" id="check">
-    <label for="check"> 
+    <input type="checkbox" (change)="makeChange()" class="h-10 w-10" id="check2">
+    <label for="check2"> 
         <svg  [ngStyle]="{'left.%': sidebar_left? '89': '-13'}" class="fill-current h-10 w-10 outline-none" id="cancel">
             <path
             d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" />
