--- a/src/app/components/post-business/post-business.component.html
+++ b/src/app/components/post-business/post-business.component.html
@@ -24,7 +24,7 @@
                         <div class="md:w-full lg:w-1/5">
                             <label
                                 class="block text-black-500 font-bold md:text-left lg:text-right mb-1 md:mb-0 pr-4"
-                                for="inline-full-name"
+                                for="name"
                             >
                                 Nombre de la empresa
                             </label>
@@ -35,6 +35,7 @@
                                 class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
                                 type="text"
                                 placeholder="Ej. Empresas Polar"
+                                id="name"
                             />
                         </div>
                     </div>
@@ -49,7 +50,7 @@
                         <div class="md:w-full lg:w-1/5">
                             <label
                                 class="block text-black-500 font-bold md:text-left lg:text-right mb-1 md:mb-0 pr-4"
-                                for="inline-full-name"
+                                for="phone"
                             >
                                 Teléfono
                             </label>
@@ -60,6 +61,7 @@
                                 class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
                                 type="text"
                                 placeholder="Ej. 02123451212"
+                                id="phone"
                             />
                         </div>
                     </div>
@@ -74,7 +76,7 @@
                     <div class="md:w-full lg:w-1/5">
                     <label
                         class="block text-black-500 font-bold md:text-left lg:text-right mb-1 md:mb-0 pr-4"
-                        for="inline-full-name"
+                        for="email"
                     >
                         Email
                     </label>
@@ -85,6 +87,7 @@
                         class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
                         type="email"
                         placeholder="Ej. empresa@gmail.com"
+                        id="email"
                     />
                     </div>
                 </div>
@@ -103,7 +106,7 @@
                     <div class="md:w-full lg:w-1/5">
                     <label
                         class="block text-black-500 font-bold md:text-left lg:text-right mb-1 md:mb-0 pr-4"
-                        for="inline-full-name"
+                        for="info"
                     >
                         ¿Cómo te podemos ayudar?
                     </label>
@@ -116,6 +119,7 @@
                         rows="10" cols="30"
                         placeholder="Quiero que mi negocio aparezca entre sus bares más destacados..."
                         style= "white-space: pre-line; white-space: pre-wrap;"
+                        id="info"
                         >
                         </textarea>
                     </div>
