--- a/src/app/components/post-drink/post-drink.component.html
+++ b/src/app/components/post-drink/post-drink.component.html
@@ -167,14 +167,14 @@
                         <div class="w-full lg:w-1/5">
                         <label
                             class="block text-black-500 font-bold lg:text-right mb-1 md:mb-6 pr-4"
-                            for="ingredients"
+                            for="ingredient{{i}}"
                         >
                             Ingrediente
                         </label>
                         </div>
                         <div class="w-full flex mb-6">
                         <div class="w-4/5">
-                            <input formControlName="ingredient" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" type="text" placeholder="Ej. Ron blanco.">
+                            <input formControlName="ingredient" id="ingredient{{i}}" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" type="text" placeholder="Ej. Ron blanco.">
                         </div>
                         <div class="pt-0 flex space-x-4 justify-end  w-1/5">
                             <button
