--- a/src/app/components/bars/detail-bar/detail-bar.component.html
+++ b/src/app/components/bars/detail-bar/detail-bar.component.html
@@ -13,13 +13,16 @@ style="margin-left: 0;"
 
   <div
   *ngIf = "!loading"
-  style="max-width: 90%; font-family: 'Open Sans', sans-serif;"
+  style="max-width: 90%"
     class="my-6 p-16 pb-16 mt-12 bg-cover  m-auto self-center  shadow"
   > 
-    <span class="text-5xl text-black bold pr-6 pl-8">{{bar.name}}</span> 
-    <span class="text-4xl text-black"> {{zone.name}}</span>
-    <div class="mt-2 pl-8 max-w-3xl text-center">  
-      <div class="flex">
+    <div class="sm:flex md:flex">
+      <div class="text-6xl font-black sm:pl-16 md:pl-16 flex justify-center ">{{bar.name}}</div> 
+      <div class="text-4xl font-light sm:pl-8 md:pl-8 flex justify-center items-center"> {{zone.name}}</div>  
+    </div>
+    
+    <div class="mt-2 sm:pl-20 md:pl-20 max-w-3xl text-center flex justify-center sm:justify-start md:justify-start">  
+      <div class="flex pb-8">
         <div *ngFor="let s of stars">
           <div *ngIf="s" class="w-12 px-2">
             <img src="../../../../assets/images/star_y.svg" alt="si">
@@ -31,78 +34,94 @@ style="margin-left: 0;"
       </div>
       
     </div>
-    <div class="w-full sm:w-1/3 md:w-1/3 sm:px-16 md:px-16 my-8">
-      <img class="w-full h-full rounded flex-initial" src="{{bar.main_image}}" alt="main_image_bar">
-    </div>
-
- <div class="mt-12 m-auto max-w-3xl text-center">
-    "{{bar.description}}"
-
-
-  </div>
-<div class="mt-12 m-auto max-w-3xl text-center">  
-  <div class="text-3xl bold">HORAS DE TRABAJO: </div>  
-  {{bar.working_hours}}
-  </div>
-  <div class="mt-12 m-auto max-w-3xl text-center">  
-    <div class="text-3xl bold">DIRECCIÓN: </div>  
-    {{bar.address}}
-  </div>
-<div class="mt-12 m-auto max-w-3xl text-center">  
-    <div class="text-3xl bold">ECHALE UN VISTAZO A SU MENU: </div>  
-    <div *ngFor="let d of bar.menu" class="pt-2">{{d.name}}: {{d.description}} </div>
-  </div>
-  <div class="mt-12 m-auto max-w-3xl text-center">  
-    <div class="text-3xl bold">CONTÁCTALOS Y SÍGUELOS: </div> 
-
-    <div class="mt-5 m-auto max-w-3xl text-center">  
-      <div class="text-1xl bold">Teléfonos: </div>  
-        <div *ngFor="let p of bar.phone" class="pt-2">
-          <a href="tel:{{p}}">{{p}}</a>
+    <div class="sm:flex md:flex sm:px-16 md:px-16 my-8">
+      <div class="w-full sm:w-full md:w-full ">
+        <img class="w-full h-full rounded flex-initial" src="{{bar.main_image}}" alt="main_image_bar">
+      </div>  
+      <div class="pt-16 sm:w-2/3 md:w-2/3">
+        <div class="flex justify-center">
+        <div class="w-full sm:w-2/3 md:w-2/3 bg-black text-white rounded sm:px-16 md:px-16 py-16">
+          <div class="flex justify-center font-medium text-3xl">Horario:</div>
+          <div class="mt-3 flex justify-center m-auto max-w-xl">
+            <div class="text-xl font-light">{{bar.working_hours}}</div>
+          </div>
+          <div class="mt-6 m-auto max-w-xl">
+            <div class="flex justify-center text-xl font-light">{{bar.address}}</div>
+          </div>
           
+          <div class="flex flex-initial space-x-6 justify-center mt-8 mb-8">
+
+            <a [href]="bar.twitter" appExternalUrl *ngIf= "bar.twitter!=''" class="lock">
+              <img class="icon-unlock w-8 cursor-pointer rounded"
+              src="../../../../assets/images/twitter_bar.svg"
+              alt="Sunset in the mountains">
+              <img class="icon-lock w-8 cursor-pointer rounded"
+              src="../../../../assets/images/twitter_bar2.svg"
+              alt="Sunset in the mountains">
+            </a>
+      
+            <a [href]="bar.instagram" appExternalUrl *ngIf= "bar.instagram!=''" class="lock">
+              <img class="icon-unlock w-8 cursor-pointer rounded"
+              src="../../../../assets/images/instagram_bar.svg"
+              alt="Sunset in the mountains">
+              <img class="icon-lock w-8 cursor-pointer rounded"
+              src="../../../../assets/images/instagram_bar2.svg"
+              alt="Sunset in the mountains">
+            </a>
+      
+            <a [href]="bar.facebook" appExternalUrl *ngIf= "bar.facebook!=''" class="lock">
+              <img class="icon-unlock w-8 cursor-pointer rounded"
+              src="../../../../assets/images/facebook_bar.svg"
+              alt="Sunset in the mountains">
+              <img class="icon-lock w-8 cursor-pointer rounded"
+              src="../../../../assets/images/facebook_bar2.svg"
+              alt="Sunset in the mountains">
+            </a>
+      
+            <a href="{{'mailto:'+bar.email}}" appExternalUrl *ngIf= "bar.email!=''" class="lock">    
+              <img class="icon-unlock w-8 cursor-pointer rounded"
+              src="../../../../assets/images/mail_bar.svg"
+              alt="Sunset in the mountains">
+              <img class="icon-lock w-8 cursor-pointer rounded"
+              src="../../../../assets/images/mail_bar2.svg"
+              alt="Sunset in the mountains">
+            </a>
+      
+          </div>
+          <div class="mt-5 m-auto max-w-3xl text-center">  
+            <div *ngFor="let p of bar.phone" class="flex justify-center pt-2">
+              <div class="px-4"> • </div>
+              <a href="tel:{{p}}">{{p}}</a>
+              <div class="px-4"> • </div>
+            </div>
         </div>
-    </div>
-
-      <div class="flex flex-initial space-x-6 justify-center mt-8">
-
-        <a [href]="bar.twitter" appExternalUrl *ngIf= "bar.twitter!=''" class="lock">
-          <img class="icon-unlock w-12 cursor-pointer rounded"
-          src="../../../../assets/images/twitter_bar.svg"
-          alt="Sunset in the mountains">
-          <img class="icon-lock w-12 cursor-pointer rounded"
-          src="../../../../assets/images/twitter_bar2.svg"
-          alt="Sunset in the mountains">
-        </a>
-
-        <a [href]="bar.instagram" appExternalUrl *ngIf= "bar.instagram!=''" class="lock">
-          <img class="icon-unlock w-12 cursor-pointer rounded"
-          src="../../../../assets/images/instagram_bar.svg"
-          alt="Sunset in the mountains">
-          <img class="icon-lock w-12 cursor-pointer rounded"
-          src="../../../../assets/images/instagram_bar2.svg"
-          alt="Sunset in the mountains">
-        </a>
-
-        <a [href]="bar.facebook" appExternalUrl *ngIf= "bar.facebook!=''" class="lock">
-          <img class="icon-unlock w-12 cursor-pointer rounded"
-          src="../../../../assets/images/facebook_bar.svg"
-          alt="Sunset in the mountains">
-          <img class="icon-lock w-12 cursor-pointer rounded"
-          src="../../../../assets/images/facebook_bar2.svg"
-          alt="Sunset in the mountains">
-        </a>
-
-        <a href="{{'mailto:'+bar.email}}" appExternalUrl *ngIf= "bar.email!=''" class="lock">    
-          <img class="icon-unlock w-12 cursor-pointer rounded"
-          src="../../../../assets/images/mail_bar.svg"
-          alt="Sunset in the mountains">
-          <img class="icon-lock w-12 cursor-pointer rounded"
-          src="../../../../assets/images/mail_bar2.svg"
-          alt="Sunset in the mountains">
-        </a>
-
+        </div>    
+        </div>
+        
       </div>
+    </div>
+    
+<div class="sm:flex md:flex sm:px-16 md:px-16">
+  
+  
+  <div class="w-full">
+  <div>
+      <div class="flex justify-center mt-12 pt-8 m-auto max-w-3xl text-center text-5xl font-light">
+          "{{bar.description}}"
+        </div>
+      <div class="mt-12 m-auto max-w-4xl text-center py-12">  
+      <p class="flex justify-center text-3xl font-extrabold tracking-widest py-4">ECHALE UN VISTAZO A SU MENU: </p>  
+      <div *ngFor="let d of bar.menu" class="flex justify-center pt-2 text-3xl font-light">{{d.name}}: {{d.description}} </div>
+    </div>  
+    
+    </div>
   </div>
+  
+</div>
+  
+
+  <!-- <div class="mt-12 m-auto max-w-3xl text-center">    
+  </div> -->
     <div id="ladilla" class="sm:grid sm:grid-cols-2 sm:gap-4 md:flex md:flex-wrap lg:flex-no-wrap md:flex-no-wrap md:xs md:pt-16">
       <div
       *ngFor="let x of images"
